tests/negative/MicroJuvix/ExpectedFunctionType.mjuvix
module ExpectedFunctionType;
  inductive Pair (A : Type) {
    mkPair : A → A → Pair A;
  };

  inductive B {
    b : B;
  };

  f : Pair B → Pair B;
  f (mkPair a b) ≔ a b;
end;
